// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatIssueCountBySeverity Critical vulns 0 1`] = `"1 High | 2 Medium | 60 Low"`;

exports[`formatIssueCountBySeverity all vuln severities 0 1`] = `""`;

exports[`formatIssueCountBySeverity all vuln severities absent 1`] = `""`;

exports[`formatIssueCountBySeverity all vuln severities present 1`] = `"1 Critical | 3 High | 15 Medium | 300 Low"`;

exports[`generateFixedAndFailedSummary has failed only 1`] = `
"Summary:

  Command run in dry run mode. Fixes are not applied.
  1 items were not fixed

"
`;

exports[`generateFixedAndFailedSummary has fixed & failed 1`] = `
"Summary:

  1 items were not fixed
  1 items were successfully fixed

"
`;

exports[`generateFixedAndFailedSummary has fixed only 1`] = `
"Summary:

  1 items were successfully fixed

"
`;

exports[`generateFixedAndFailedSummary has skipped & failed & plugin errors 1`] = `
"Summary:

  Command run in dry run mode. Fixes are not applied.
  2 items were not fixed
  1 items were successfully fixed

"
`;

exports[`generateSuccessfulFixesSummary has fixed & failed 1`] = `
"Successful fixes:

  requirements.txt
  ✔ Upgraded Django from 1.6.1 to 2.0.1
  x Failed to upgrade transitive from 6.1.0 to 6.2.1
  Reason:  Version not compatible.
  Tip:     Apply the changes manually"
`;

exports[`generateUnresolvedSummary has failed upgrades & unsupported 1`] = `
"Unresolved items:

  package.json
  ✖ npm is not supported"
`;

exports[`showResultsSummary called with nothing to fix 1`] = `
"
 ✖ No successful fixes"
`;

exports[`showResultsSummary has failed, skipped, successful & plugin errors 1`] = `
"
Successful fixes:

  requirements.txt
  ✔ Upgraded Django from 1.6.1 to 2.0.1
  x Failed to upgrade transitive from 6.1.0 to 6.2.1
  Reason:  Version not compatible.
  Tip:     Apply the changes manually

Unresolved items:

  pip project
  ✖ Missing required file name

  package.json
  ✖ npm is not supported

Summary:

  2 items were not fixed
  1 items were successfully fixed

  3 issues: 3 High
  3 issues are fixable
  1 issues were successfully fixed


Tip: Re-run in debug mode to see more information: DEBUG=*snyk* <COMMAND>. If the issue persists contact support@snyk.io"
`;

exports[`showResultsSummary has unresolved only 1`] = `
"
 ✖ No successful fixes

Unresolved items:

  package.json
  ✖ npm is not supported

Summary:

  1 items were not fixed

  1 issues: 1 High
  1 issues are fixable
  


Tip: Re-run in debug mode to see more information: DEBUG=*snyk* <COMMAND>. If the issue persists contact support@snyk.io"
`;
